<resources>
    <string name="app_name">Bizgrowthh</string>
    <string name="faq1">* What is “Feasibility” and “Viability” of a business?

“Feasibility” is examining the possibility of manufacturing the product or delivering the service.
“Viability” is examining the sustainability of the proposed business activity in the coming years.</string>
    <string name="faq2">* How long does it take Bizgrowth to create a Business Plan?

It takes approximately 4 working days once all documents along with the required information is received.</string>
    <string name="faq3">*  Why should I create a Business Plan and Project Report?

Writing a business plan is an opportunity to carefully think through every step of starting your business and helps in a number of ways including:
* Validating your assumptions and determining the need for your product or service in the market.
* Giving a structure to your idea and saving time and resources in the long run.
* Making projections that give you a good understanding of how your business will operate in the future.</string>
    <string name="faq4">* When can a Business Plan be prepared?

Business Plan can be prepared when you are planning to start a business, so as to understand the ‘Viability’ and ‘Feasibility’ of the proposed business idea. Also, for existing businesses when the entrepreneur is planning to expand the business or while introducing a new line of service or product or while opening a new branch etc.
</string>
    <string-array name="Sector">
        <item>All</item>
        <item>Food</item>
        <item>Other than Food</item>
    </string-array>
    <string-array name="businessstage">
        <item>Start</item>
        <item>Manage</item>
        <item>Grow</item>
    </string-array>
    <string-array name="category">
        <item>Legal Compliances</item>
        <item>Business Performance Improvement</item>
        <item>Professional Services</item>
        <item>Marketing</item>
        <item>Consultation</item>
    </string-array>
    <string-array name="Countries">
        <item>USA</item>
        <item>Europe</item>
        <item>UK</item>
        <item>Australia</item>
        <item>Korea</item>
        <item>Russia</item>
        <item>Japan</item>
        <item>China</item>
        <item>Israel</item>
        <item>Qatar</item>
    </string-array>
    <string-array name="qualification">
        <item>Highest Qualification</item>
        <item>Bachelors Degree</item>
        <item>Diploma</item>
        <item>Masters Degree</item>
        <item>Doctoral</item>
        <item>Certificate</item>
    </string-array>
    <string-array name="consultancy">
        <item>Sector Of Consultancy</item>
        <item>Marketing</item>
        <item>Sales</item>
        <item>Human Resource</item>
        <item>Operation</item>
        <item>Finance</item>
        <item>Technology</item>
        <item>Legal</item>
        <item>Engineering</item>
    </string-array>
    <string-array name="sub">
        <item>Select Sub-Category</item>
        <item>Digital Marketing</item>
        <item>SEO</item>
        <item>Email Marketing</item>
        <item>Growth Marketing</item>
        <item>Content Marketing</item>
        <item>Social Media Marketing</item>
        <item>CRO</item>
        <item>Product Marketing</item>
        <item>Brand Marketing</item>
        <item>Event Marketing</item>
        <item>Marketing Analysis</item>
    </string-array>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="Or">OR</string>
    <string name="Login_with_Email">Login with Email</string>
    <string name="bizgrowthh_Term">If you continue, you are accepting Bizgrowthh Terms and Conditions and Privacy Policy</string>
    <string name="default_web_client_id">1093334374553-5vpqmf2a9atr3lgjj0aspbgcchk189l6.apps.googleusercontent.com</string>
    <string name="next">Next</string>
    <string name="country_code">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">We will send confirmation code to your phone.</string>
    <string name="country">Country</string>
    <string name="login">Login</string>
    <string name="title">Enter your phone</string>
    <string name="resend">RESEND CODE BY CALL</string>
    <string name="phone_message">We sent a 4-digit code to</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="whats_youe_name">Whats your name?</string>
    <string name="StrangerFeel">Stranger feel so impersonal, you know?</string>
    <string name="email">Email</string>
</resources>